# QuickType

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  benchmark.cpp  conjunction.h  doxy_cfg  main.cpp  namedtype.h  operators.h  operators_witharithmetictypes.h  operators_witharithmetictypes_unittest.cpp  operators_withconvert.h  skills.h  strong_type.h  strong_type_convert_unittest.cpp  strong_type_unittest.cpp
benchmark/: CMakeLists.txt  benchmark.cpp
docker/: Dockerfile  build_script.sh
examples/: CMakeLists.txt  example1.cpp
quick_type/: conjunction.hpp  convert.hpp  distance_types.hpp  namedtype.h  namedtype.hpp  operators.h  operators.hpp  operators_witharithmetictypes.h  operators_witharithmetictypes.hpp  operators_withconvert.h  operators_withconvert.hpp  quick_type.h  quick_type.hpp  skills.h  skills.hpp  temperature.hpp
unittests/: CMakeLists.txt  operators_unittest.cpp  operators_witharithmetictypes_unittest.cpp  operators_withconvert_unittest.cpp  other_functions_unittest.cpp
